# Presale-avc-Rossiya

./: .gitignore  README.md  requirements.txt
application/: data_generation.py  main_cp.py  main_cpp.py  main_maxsat.py  main_mip.py  main_pulp.py  tmp.py  visualizer.py  visualizer_2.py
docs/: Постановка.docx  Сравнительные результаты v5.docx
src/cpp/: .clang-format  CMakeLists.txt
src/cpp/app/: solver.cpp  spdlog_tmp.cpp  spdlog_tmp.hpp
src/cpp/core/: conflicts.hpp  fdp_solver.hpp  fdp_types.hpp  instance.hpp  parsed_data.hpp  parser.hpp  priority_queue.hpp  score_manager.hpp  solution_state.hpp
src/py/: problem_structures.py  settings.py  utils.py
src/py/data_processing/: __init__.py  generate_data.py  import_data.py  manipulate_data.py  manipulate_opt_data.py
src/py/solver/: __init__.py  base_solver.py  solver_cp.py  solver_cpp.py  solver_max_sat.py  solver_mip.py  solver_pulp_mip.py
